fixes to both conntact/ and spiral_search_example/ to be more compatible with ros2. Some nodes still die, system not yet running, suspect an env setup issue.

--- a/spiral_search_example_ros2/config/ur10e_controllers.yaml
+++ b/spiral_search_example_ros2/config/ur10e_controllers.yaml
@@ -1,10 +1,10 @@
-# Settings for ros_control control loop
-hardware_control_loop:
-   loop_hz: 500
-
 controller_manager:
   ros__parameters:
     update_rate: 500  # Hz
+
+#  # Settings for ros_control control loop
+#  hardware_control_loop:
+#     loop_hz: 500
 
 # Publish all joint states ----------------------------------
     joint_state_broadcaster:
