--- a/conntact/package.xml
+++ b/conntact/package.xml
@@ -22,6 +22,8 @@
   <exec_depend>ur_description</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
