--- a/spiral_search_example_ros2/package.xml
+++ b/spiral_search_example_ros2/package.xml
@@ -12,10 +12,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
+<!--  <depend>tf_transformations</depend>-->
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
 <!--  <exec_depend>joint_state_publisher</exec_depend>-->
 <!--  <exec_depend>robot_state_publisher</exec_depend>-->
   <depend>conntact</depend>
